# CCMetagen

./: .gitignore  AUTHORS.md  CCMetagen.py  CCMetagen_extract_seqs.py  CCMetagen_merge.py  CHANGELOG.md  Contributions.txt  README.md  environment.yaml  setup.cfg  setup.py
.github/workflows/: python-publish.yml
BenchmarkingContainer/00_original_PBS/: centrifuge_RefSeq_FungiPartialdb.sh  s06.2_centrifuge.sh
BenchmarkingContainer/zz_How_I_run_before_del/: s04_assembly.sh  s06.1.2_KMetagen_more_ds.sh  s06.1_KMA_all_db.sh  s06.2_centrifuge.sh  s06.4_BLASTn_all_db.sh  s06.5_krakenUniq_all_db.sh  s06.6_kraken.sh
BenchmarkingTools/: BLAST2SQL_nt.py  blast_result_parser.py
BenchmarkingTools/convert2sql/: 2_mtg_ITS.res  2_mtg_ITS.txt  2_mtg_refSeq_bf.spa  AccuracyRecall.py  AccuracyRecall_per_RefDB.py  BLAST2SQL.py  BLAST2SQL_nt.py  Centrifuge2SQL.py  Diamond2SQL.py  (+12 more)
Perl_HV_version/: commands.txt  res_filter.pl  taxonmatch_filter.pl  write_fasta.pl
benchmarking/: README.md  README_BenchMark.md
ccmetagen/: __init__.py  cTaxInfo.py  fNCBItax.py  fParseKMA.py  version.py
docs/: old_repository_README.md
tests/: test_ccmetagen.py
tools/: ALG_1.unmatched-sortmerna_merged.R1.fastq.res.csv  ALG_2.res  ALG_2.trimmed.unmatched-sortmerna_merged.R1.fastq.res.csv  CCMetagen.py  CCMetagen_merge.py  CCMetagen_nt_results.csv  KMetagen.py  KMetagen_merge.py  KMetagen_part2_QC1_summ.ipy  KMetagen_part3_QC2_FilterFrags.py  cTaxInfo.py  fAcc2TaxId.py  fNCBItax.py  fParseKMA.py  fRunKMA.py  parse_result_2mtg.csv
tutorial/: .Rhistory  PhyloSeq_graphs_publication.R  README.md
(+83 files in other folders)
