[metadata]
name = CCMetagen
version = attr: ccmetagen.__version__
author = Vanessa R. Marcelino Jan P. Buchmann Andreas Sjödin Philip T.L.C. Clausen
author_email = vrmarcelino@gmail.com
description = Microbiome classification pipeline
long_description = file: README.md
long_description_content_type = text/markdown
keywords = bioinformatics taxonomy metagenomic classifier KMA
url = https://github.com/vrmarcelino/CCMetagen.git
project_urls =
    Source = https://github.com/vrmarcelino/CCMetagen.git
    Preprint = https://www.biorxiv.org/content/10.1101/641332v2
license = GPL-3.0
classifiers =
  Programming Language :: Python :: 3.9
  Operating System :: POSIX :: Linux
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Topic :: Scientific/Engineering :: Bio-Informatics

[options]
python_requires = >=3.9
packages =
  ccmetagen

install_requires =
  pandas
  ete3

scripts =
  CCMetagen.py
  CCMetagen_merge.py
  CCMetagen_extract_seqs.py

include_package_data = True

#[options.package_data]
#ccmetagen = CCMetagen.py
